zellij/src/tests/integration/snapshots/mosaic__tests__integration__resize_left__cannot_resize_left_when_pane_to_the_left_is_at_minimum_width-3.snap
---
source: src/tests/integration/resize_left.rs
expression: snapshot
---
14-b│█   
b   │    
line│    
15-b│    
b   │    
line│    
16-b│    
b   │    
line│    
17-b│    
b   │    
line│    
18-b│    
b   │    
line│    
19-b│    
b   │    
prom│    
pt $│    
    │    
